css/custom.css
/*other*/

/* Sprečava "flash" sadržaja ispod slidera pre nego što se Revolution Slider inicijalizuje */
.rev_slider_wrapper.fullscreen-container {
    min-height: 100vh;
    background-color: #f0f0f0;
}

/* =============================================
   PRIMARNE BOJE SAJTA - menjati ovde
   ============================================= */
:root {
    --color-primary:        #af3850;  /* vino/ciklama - dugmad, linkovi, akcenti */
    --color-primary-hover:  #8c3040;  /* tamnija varijanta za hover */
    --color-secondary:      #7ab3ba;  /* tamna sivo/zelena - sekundarni elementi */
    --color-secondary-hover:#5a9aa0;  /* tamnija varijanta za hover */
}
/* ============================================= */


.sc_custom_1459259915855 {
	background-color: #f8f8f8!important;
}
.sc_custom_1459330954110 {
	background-color: #af3850!important;
}
.sc_custom_1459343317996 {
	background-color: #f8f8f8!important;
}
.sc_custom_1459341675644 {
	background-image: url(../images/hero.webp)!important;
}
.sc_custom_1459346050873 {
	background-color: #f8f8f8!important;
}
.sc_custom_1459347818729 {
	background-image: url(../images/hero.webp)!important;
}
.sc_custom_1459352457001 {
	margin-top: 28px!important;
}
.sc_custom_1459344743835 {
	margin-top: 25px!important;
}


.sc_custom_1459501367721 {
	background-image: url(../images/utisci-inner-dynamic-method.webp) !important;
}
.sc_custom_1459502371704 {
	background-color: #7ab3ba !important;
}
.sc_custom_1459503174388 {
	background-color: #f8f8f8 !important;
}
.sc_custom_1459609995583 {
	background-image: url(../images/Layer-25-copy1.png) !important;
}
.sc_custom_1460641232039 {
	margin-bottom: 25px !important;
}


.sc_custom_1459762742825 {
    background-color: #f8f8f8!important;
}
.sc_custom_1459330954110 {
    background-color: #af3850!important;
}
.sc_custom_1459773167157 {
    background-color: #f8f8f8!important;
}
.sc_custom_1459776057240 {
    background-color: #7ab3ba!important;
}
.sc_custom_1459766274952 {
    margin-bottom: 13px!important;
}
.sc_custom_1459766274952 {
    margin-bottom: 13px!important;
}
.sc_custom_1459766274952 {
    margin-bottom: 13px!important;
}
.sc_custom_1459766274952 {
    margin-bottom: 13px!important;
}
.sc_custom_1459766274952 {
    margin-bottom: 13px!important;
}
.sc_custom_1459848155774 {
	background-image: url(../images/hero.webp)!important;
}


.sc_custom_1459502371704{
	background-color:#7ab3ba!important;
}
.sc_custom_1459783303281{
	background-color:#f8f8f8!important;
}

.sc_custom_1459775715133 {
	background-color:#f8f8f8!important;
}
.sc_custom_1459501367721 {
	background-image:url(../images/utisci-inner-dynamic-method.webp)!important;
}

.sc_custom_1460037247892 {
	background-color: #f8f8f8!important;
}

.sc_custom_1459347818729 {
	background-image: url(../images/hero.webp)!important;
}

.sc_custom_1459502371704 {
	background-color: #7ab3ba!important;
}

.sc_custom_1459783303281 {
	background-color: #f8f8f8!important;
}


.sc_custom_1459845857052{
	background-color:#f8f8f8!important;
}

.sc_custom_1458736214924 {
	margin-bottom:20px!important;
}

.sc_custom_1449134047180 {
    background-color: #ffffff!important;
}
.sc_custom_1449136753813 {
    background-color: #f6f7f7!important;
}

.sc_custom_1449052136583 {
    background-color: #ffffff!important;
}
.sc_custom_1460038439472 {
    background-color: #f8f8f8!important;
}
.sc_custom_1449069687256 {
    background-color: #ffffff!important;
}
.sc_custom_1460038449775 {
    background-color: #f8f8f8!important;
}
.sc_custom_1460723083670 {
    margin-top: 25px!important;
    margin-bottom: 30px!important;
}
.sc_custom_1460723195125 {
    margin-top: 20px!important;
}
.sc_custom_1460723097648 {
    margin-top: 30px!important;
}
.sc_custom_1459857781965 {
    padding-right: 45px!important;
}

.sc_custom_1459783303281 {
    background-color: #f8f8f8!important;
}
.sc_custom_1457948826201 {
    margin-bottom: 20px!important;
}

.sc_custom_1459762742825 {
    background-color: #f8f8f8!important;
}
.sc_custom_1459330954110 {
    background-color: #af3850!important;
}
.sc_custom_1459773167157 {
    background-color: #f8f8f8!important;
}
.sc_custom_1459776057240 {
    background-color: #7ab3ba!important;
}
.sc_custom_1459766274952 {
    margin-bottom: 13px!important;
}
.sc_custom_1459766274952 {
    margin-bottom: 13px!important;
}
.sc_custom_1459766274952 {
    margin-bottom: 13px!important;
}
.sc_custom_1459766274952 {
    margin-bottom: 13px!important;
}
.sc_custom_1459766274952 {
    margin-bottom: 13px!important;
}

.wp-social-login-provider-list{
	padding:10px
}
.wp-social-login-provider-list a{
	text-decoration:none
}
.wp-social-login-provider-list img{
	border:0
}


.cu_fullwidth {
	width:100%;
}
.cu_width90p {
	width:90%;
}
.cu_halfwidth {
	width:50%;
}

.cu_width-1110 {
	width:1110px;
}
.cu_width-1100 {
	width:1100px;
}
.cu_width-1080 {
	width:1080px;
}
.cu_width-990 {
	width:990px;
}
.cu_width-970 {
	width:970px;
}
.cu_width-840 {
	width:840px;
}
.cu_width-770 {
	width:770px;
}

.cu_fl_R {
	float: right;
}
.cu_fl_L {
	float: left;
}


.cu_nopadds {
	padding: 0px!important;
}

.cu_pds_1 {
	padding: 0 2em 5em 5em!important;
}
.cu_pds_2,
.sc_list_style_iconed li.cu_pds_2 {
	padding-left: 3em !important;
}

.cu_mrg_tt {
	margin-top:tiny;;
}
.cu_mrg_bh {
	margin-bottom:huge;
}

.cu_mrg_1 {
	margin-top:3em;
}
.cu_mrg_2 {
	margin-bottom: 1.15em;
}
.cu_mrg_3 {
	margin-top:3.3em;
}
.cu_mrg_4 {
	margin-top:1.45em;
	margin-bottom:0.65em;
}
.cu_mrg_5 {
	margin-top:0.8em;
}
.cu_mrg_6 {
	margin-top:2em;
}
.cu_mrg_7 {
	margin-top:3.5em;
}
.cu_mrg_8 {
	margin-top:4.1em;
}

.cu_block_1 {
	width: 45%!important; 
	float: right; 
	margin:3.3em 0;
}
.cu_block_2 {
	margin-bottom:1.3em;
	font-size:1em;
}
.cu_block_3 {
	display: block!important; 
	text-align: center;
	margin-top:3.4em;
	margin-bottom:2.75em;
}
.cu_block_4 {
	background-image:url(../images/odnosi-pocetna.webp);
	background-repeat:no-repeat;
	background-size:cover;
	background-position:center center;
}
/* ... */

